infra/monitoring/prometheus-stack/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-stack
  labels:
    pod-security.kubernetes.io/enforce: privileged
